# gemini-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  podman-compose.yml  pyproject.toml
gemini_agent/: __init__.py  _version.py
gemini_agent/client/: __init__.py  client.py
gemini_agent/core/: __init__.py  agent.py  models.py
gemini_agent/server/: __init__.py  app.py  config.py  models.py  worker.py
gemini_agent/server/routes/: __init__.py  health.py  mcp.py  sessions.py  tasks.py
