[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-cli-agent"
dynamic = ["version"]
description = "Python wrapper for Google's Gemini CLI agentic capabilities"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Saurav Chandra", email = "mail@sauravchandra.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["gemini", "ai", "agent", "cli", "mcp", "google", "llm"]

# Core dependencies (minimal - for client usage)
dependencies = [
    "httpx>=0.26.0",
]

[project.optional-dependencies]
# Full server with FastAPI + Celery
server = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.9",
]

# For direct CLI usage (core module)
core = []  # No extra deps, just needs gemini CLI installed

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# All features
all = [
    "gemini-cli-agent[server]",
]

[project.urls]
Homepage = "https://github.com/sauravchandra/gemini-agent"
Documentation = "https://github.com/sauravchandra/gemini-agent#readme"
Repository = "https://github.com/sauravchandra/gemini-agent"

[project.scripts]
gemini-agent-server = "gemini_agent.server.app:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["gemini_agent*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools_scm]
write_to = "gemini_agent/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
